logs/mox3_build.log
Removing old build directory
Removing old work directory
BUILD START: mox3-0.7.0-py27_0
Fetching package metadata: ......
Solving package specifications: .+ /home/ubuntu/miniconda/envs/_build/bin/python setup.py install
running install
You are using pip version 6.1.1, however version 7.0.1 is available.
You should consider upgrading via the 'pip install --upgrade pip' command.
Requirement already satisfied (use --upgrade to upgrade): pbr<1.0,>=0.5.21 in /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages
Collecting fixtures>=0.3.12
  Downloading http://localhost/packages/2.7/f/fixtures/fixtures-1.2.0-py2.py3-none-any.whl (59kB)
Requirement already satisfied (use --upgrade to upgrade): pip in /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages (from pbr<1.0,>=0.5.21)
Collecting testtools>=0.9.22 (from fixtures>=0.3.12)
  Downloading http://localhost/packages/2.7/t/testtools/testtools-1.8.0-py2.py3-none-any.whl (160kB)
Collecting traceback2 (from testtools>=0.9.22->fixtures>=0.3.12)
  Downloading http://localhost/packages/3.4/t/traceback2/traceback2-1.4.0-py2.py3-none-any.whl
Collecting extras (from testtools>=0.9.22->fixtures>=0.3.12)
  Downloading http://localhost/packages/source/e/extras/extras-0.0.3.tar.gz
Collecting unittest2>=1.0.0 (from testtools>=0.9.22->fixtures>=0.3.12)
  Downloading http://localhost/packages/3.4/u/unittest2/unittest2-1.0.1-py2.py3-none-any.whl (95kB)
Collecting python-mimeparse (from testtools>=0.9.22->fixtures>=0.3.12)
  Downloading http://localhost/packages/source/p/python-mimeparse/python-mimeparse-0.1.4.tar.gz
Collecting linecache2 (from traceback2->testtools>=0.9.22->fixtures>=0.3.12)
  Downloading http://localhost/packages/3.5/l/linecache2/linecache2-1.0.0-py2.py3-none-any.whl
Collecting argparse (from unittest2>=1.0.0->testtools>=0.9.22->fixtures>=0.3.12)
  Downloading http://localhost/packages/2.7/a/argparse/argparse-1.3.0-py2.py3-none-any.whl
Collecting six>=1.4 (from unittest2>=1.0.0->testtools>=0.9.22->fixtures>=0.3.12)
  Downloading http://localhost/packages/3.3/s/six/six-1.9.0-py2.py3-none-any.whl
Installing collected packages: linecache2, traceback2, extras, argparse, six, unittest2, python-mimeparse, testtools, fixtures
  Running setup.py install for extras
  Running setup.py install for python-mimeparse
Successfully installed argparse-1.3.0 extras-0.0.3 fixtures-1.2.0 linecache2-1.0.0 python-mimeparse-0.1.4 six-1.9.0 testtools-1.8.0 traceback2-1.4.0 unittest2-1.0.1
running build
running build_py
creating build
creating build/lib
creating build/lib/mox3
creating build/lib/mox3/tests
copying mox3/tests/test_mox.py -> build/lib/mox3/tests
copying mox3/tests/stubout_helper.py -> build/lib/mox3/tests
copying mox3/tests/test_stubout.py -> build/lib/mox3/tests
copying mox3/tests/__init__.py -> build/lib/mox3/tests
copying mox3/tests/mox_helper.py -> build/lib/mox3/tests
copying mox3/stubout.py -> build/lib/mox3
copying mox3/__init__.py -> build/lib/mox3
copying mox3/mox.py -> build/lib/mox3
copying mox3/fixture.py -> build/lib/mox3
running egg_info
writing requirements to mox3.egg-info/requires.txt
writing mox3.egg-info/PKG-INFO
writing top-level names to mox3.egg-info/top_level.txt
writing dependency_links to mox3.egg-info/dependency_links.txt
[pbr] Reusing existing SOURCES.txt
running install_lib
creating /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/mox3
copying build/lib/mox3/stubout.py -> /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/mox3
creating /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/mox3/tests
copying build/lib/mox3/tests/test_mox.py -> /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/mox3/tests
copying build/lib/mox3/tests/stubout_helper.py -> /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/mox3/tests
copying build/lib/mox3/tests/test_stubout.py -> /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/mox3/tests
copying build/lib/mox3/tests/__init__.py -> /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/mox3/tests
copying build/lib/mox3/tests/mox_helper.py -> /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/mox3/tests
copying build/lib/mox3/__init__.py -> /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/mox3
copying build/lib/mox3/mox.py -> /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/mox3
copying build/lib/mox3/fixture.py -> /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/mox3
byte-compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/mox3/stubout.py to stubout.pyc
byte-compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/mox3/tests/test_mox.py to test_mox.pyc
byte-compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/mox3/tests/stubout_helper.py to stubout_helper.pyc
byte-compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/mox3/tests/test_stubout.py to test_stubout.pyc
byte-compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/mox3/tests/__init__.py to __init__.pyc
byte-compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/mox3/tests/mox_helper.py to mox_helper.pyc
byte-compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/mox3/__init__.py to __init__.pyc
byte-compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/mox3/mox.py to mox.pyc
byte-compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/mox3/fixture.py to fixture.pyc
running install_egg_info
Copying mox3.egg-info to /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/mox3-0.7.0-py2.7.egg-info
running install_scripts
Compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2/tests/inspect_fodder2.py ...
  File "/home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2/tests/inspect_fodder2.py", line 102
    def keyworded(*arg1, arg2=1):
                            ^
SyntaxError: invalid syntax


The following NEW packages will be INSTALLED:

    openssl:    1.0.1k-1     
    pbr:        0.11.0-py27_0
    pip:        6.1.1-py27_0 
    python:     2.7.9-3      
    readline:   6.2-2        
    setuptools: 16.0-py27_0  
    sqlite:     3.8.4.1-1    
    system:     5.8-2        
    tk:         8.5.18-0     
    zlib:       1.2.8-0      

Linking packages ...
[                    ]|                                                  |   0%[openssl             ]|                                                  |   0%[readline            ]|#####                                             |  10%[sqlite              ]|##########                                        |  20%[system              ]|###############                                   |  30%[tk                  ]|####################                              |  40%[zlib                ]|#########################                         |  50%[python              ]|##############################                    |  60%[setuptools          ]|###################################               |  70%[pip                 ]|########################################          |  80%[pbr                 ]|#############################################     |  90%[      COMPLETE      ]|##################################################| 100%
Removing old work directory
Source cache directory is: /home/ubuntu/miniconda/conda-bld/src_cache
Found source in cache: mox3-0.7.0.tar.gz
Extracting download
Package: mox3-0.7.0-py27_0
source tree in: /home/ubuntu/miniconda/conda-bld/work/mox3-0.7.0
compiling .pyc files...
Command failed: /home/ubuntu/miniconda/envs/_build/bin/python -Wi /home/ubuntu/miniconda/envs/_build/lib/python2.7/compileall.py -q -x port_v3 /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages
